some but not all bugs squashed with sliders and summing to 100

--- a/public/css/simplefcast.css
+++ b/public/css/simplefcast.css
@@ -32,12 +32,12 @@ header img {float:left;}
 }
 
 #forecast .glyphicon.glyphicon-lock.locked{
-	color:#000;	
+	color:#444;	
 	cursor:pointer;
 }
 
 #forecast .slider-val.locked{
-	color:red;	
+	font-weight: bold;	
 }
 
 #forecast .noUiSlider{
